alignfull IE fix

--- a/assets/scss/generic/_alignment.scss
+++ b/assets/scss/generic/_alignment.scss
@@ -4,8 +4,10 @@
 
 %alignfull {
 	left: 50%;
+	margin-left: calc((-100vw + 17px) / 2);
 	margin-left: calc(-50vw + (var(--scrollbar-width) / 2));
 	position: relative;
+	width: calc(100vw - 17px);
 	width: calc(100vw - var(--scrollbar-width));
 }
 
@@ -28,7 +30,9 @@ body:not(.has-sidebar) {
 		}
 
 		@include bp-between($alignwide-width, $alignwide-with-padding) {
+			margin-left: calc((-100vw + 17px) / 2 + #{ rem-calc($container-padding) });
 			margin-left: calc(-50vw + (var(--scrollbar-width) / 2) + #{ rem-calc($container-padding) });
+			width: calc(100vw - 17px - #{ rem-calc(2 * $container-padding) });
 			width: calc(100vw - var(--scrollbar-width) - #{ rem-calc(2 * $container-padding) });
 		}
 	}
